refactor: change to softly delete job seeker and reuse code